# LatchLine

./: .gitignore  Justfile  README.md  pyproject.toml
.claude-plugin/: plugin.json
commands/: latchline-setup.md
config/: reviewer.conf
docs/: README.md  configuration.md  custom-rules.md  features.md
hooks/: ai-review.py  ai-review.sh  hooks.json
hooks/scripts/: setup-config.py
src/latchline/: __init__.py  cli.py
tests/: test_ai_review.py
