[project]
name = "latchline"
version = "0.1.0"
description = "LatchLine review hook"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

[project.scripts]
latchline = "latchline.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/latchline"]

[dependency-groups]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
